[B]Retrospect v5.7.15 - Changelog - 2024-08-07[/B]

This version includes some minor fixes in the "search" feature and fixes the GoPlay and Videoland channels.

[B]Framework related[/B]
* Fixed: Highlighter of searchresults were shown in the favourites (Fixes #1818).
* Fixed: In some cases a new searched items would be cleaned up immediately.

[B]GUI/Settings/Language related[/B]
_None_

[B]Channel related[/B]
* Fixed: Vier.be season and video parsing (See #1820).
* Fixed: Videoland streams and live TV (Fixes #1813 and Fixes #1804)