@@ -11,4 +11,5 @@ _None_
 
 [B]Channel related[/B]
 * Fixed: Vier.be season and video parsing (See #1820).
-* Fixed: Videoland streams and live TV (Fixes #1813 and Fixes #1804)
+* Fixed: Videoland streams and live TV (Fixes #1813 and Fixes #1804).
+* Fixed: Videoland Single detection (Fixed #1824).
